Fixed image text overlapping #47

--- a/_sass/media500.scss
+++ b/_sass/media500.scss
@@ -79,7 +79,6 @@
 
         figure {
             &.left, &.right, &.large {
-                margin: 0 0 10px 0;
                 width: 100%;
             }
         }
